--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-modName = MyMod
+modName = Gregtech Nomi
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = mymodid
+modId = gregtechnomi
 
-modGroup = com.myname.mymodid
+modGroup = com.lucaschan1020.gregtechnomi
 
 # WHY is there no version field?
 # The build script relies on git to provide a version via tags. It is super easy and will enable you to always know the
